--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@headlessui/react": "^2.1.4",
     "@reduxjs/toolkit": "^2.2.7",
     "clsx": "^2.1.1",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^11.5.2",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
